# light-show

./: .gitignore  CMakeLists.txt  LICENSE  README.md
res/shader/: pbr.frag  pbr.vert
src/: asset_manager.cpp  asset_manager.hpp  camera.cpp  camera.hpp  graphics.cpp  graphics.hpp  input.cpp  input.hpp  main.cpp
src/opengl/: shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/system/: asset_manager.cpp  asset_manager.hpp  camera.cpp  camera.hpp  graphics.cpp  graphics.hpp  input.cpp  input.hpp  window.cpp  window.hpp
src/util/: ls_log.cpp  ls_log.hpp  util.cpp  util.hpp
